[package]
name = "sundae"
version = "0.0.1"
edition = "2021"

[dependencies]
aead = { version = "0.4.3", default-features = false }
aes = { version = "0.8.1", optional = true }
cipher = "0.4.3"

[dev-dependencies]
criterion = "0.3.5"
criterion-cycles-per-byte = "0.1.2"
rand = "0.8.5"

[features]
default = ["aes", "alloc"]
std = ["aead/std", "alloc"]
alloc = ["aead/alloc"]
heapless = ["aead/heapless"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
