[package]
name = "sundae"
version = "0.0.1"
edition = "2021"

[dependencies]
aead = { version = "0.5.0", default-features = false }
aes = { version = "0.8.1", optional = true }
cipher = "0.4.3"

[dev-dependencies]
criterion = "0.3.5"
criterion-cycles-per-byte = "0.1.2"
rand = "0.8.5"
camellia = { git = "https://github.com/RustCrypto/block-ciphers" }

[features]
default = ["aes", "alloc"]
std = ["aead/std", "alloc"]
alloc = ["aead/alloc"]
heapless = ["aead/heapless"]

# Compile for speed
[profile.release]
codegen-units = 1
opt-level = 3
lto = true
debug = false
debug-assertions = false
panic = "abort"

# Compile for library size
#[profile.release]
#codegen-units = 1
#opt-level = "z"
#lto = true
#debug = false
#debug-assertions = false
#panic = "abort"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "sundae_enc"
path = "benches/sundae_enc.rs"
harness = false
